--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,15 @@
         android:hint="Email"
         android:layout_marginLeft="28dp"
         android:layout_marginRight="28dp"/>
-
+    <EditText
+        android:id="@+id/edt_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edt_email"
+        android:layout_marginTop="18dp"
+        android:hint="Password"
+        android:layout_marginLeft="28dp"
+        android:layout_marginRight="28dp"/>
 
 
 
