--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,23 +16,33 @@
     <EditText
         android:id="@+id/edt_email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_below="@id/app_logo"
         android:layout_marginTop="18dp"
         android:hint="Email"
+        android:paddingLeft="13dp"
+        android:background="@drawable/edt_background"
         android:layout_marginLeft="28dp"
         android:layout_marginRight="28dp"/>
     <EditText
         android:id="@+id/edt_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_below="@id/edt_email"
         android:layout_marginTop="18dp"
         android:hint="Password"
+        android:background="@drawable/edt_background"
+        android:paddingLeft="13dp"
         android:layout_marginLeft="28dp"
         android:layout_marginRight="28dp"/>
 
-
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/edt_password"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/Login_Button"
+        android:layout_marginTop="18dp"/>
 
 
 </RelativeLayout>
