--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,12 +37,20 @@
         android:layout_marginRight="28dp"/>
 
     <ImageButton
+        android:id="@+id/Login_button"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_below="@id/edt_password"
         android:layout_centerHorizontal="true"
         android:src="@drawable/Login_Button"
         android:layout_marginTop="18dp"/>
-
+    <ImageButton
+        android:id="@+id/Signup_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/Login_button"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/SignUp_Button"
+        android:layout_marginTop="18dp"/>
 
 </RelativeLayout>
