--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,7 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/App_Logo" />
+        android:src="@drawable/applogo" />
     <EditText
         android:id="@+id/Name"
         android:layout_width="match_parent"
@@ -55,7 +55,7 @@
         android:layout_height="100dp"
         android:layout_below="@id/edt_password"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/SignUp_Button"
+        android:src="@drawable/signupbtn"
         android:layout_marginTop="18dp"/>
 
 </RelativeLayout>
