--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-      
+
         <TextView
+            android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ARYAN"
@@ -13,6 +14,12 @@
             android:layout_marginLeft="10dp"/>
 
 
+        <View
+            android:layout_below="@id/txt_name"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@color/palegreen"
 
+                />
 
 </RelativeLayout>
