--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -5,6 +5,7 @@
 
 
         <TextView
+            android:layout_marginTop="5dp"
             android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
 
         <View
             android:layout_below="@id/txt_name"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@color/palegreen"
