--- a/app/src/main/res/layout/recieved.xml
+++ b/app/src/main/res/layout/recieved.xml
@@ -15,7 +15,7 @@
 
         <TextView
 
-            android:id="@+id/txt_sent_message"
+            android:id="@+id/txt_recieved_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="This is recieved message"
