--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -35,6 +35,7 @@
 
 
         <ImageView
+            android:id="@+id/sendButton"
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:src="@drawable/sendbutton"
