--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,18 +39,22 @@
     <Button
         android:id="@+id/Login_button"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="40dp"
         android:layout_below="@id/edt_password"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/loginbtn"
+        android:text="LOG IN"
+        android:textColor="@color/white"
+        android:background="@color/palegreen"
         android:layout_marginTop="18dp"/>
     <Button
         android:id="@+id/Signup_button"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="40dp"
         android:layout_below="@id/Login_button"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/signupbtn"
+        android:text="SIGN UP"
+        android:textColor="@color/white"
+        android:background="@color/palegreen"
         android:layout_marginTop="18dp"/>
 
 </RelativeLayout>
